# simple-dns-client

./: .gitignore  CMakeLists.txt  README.md  client  client.cpp  debug.sh  release.sh  test  test.cpp  thread_pool.h
include/: dns_cache_manager.h  dns_msg.h  dns_resolver.h  dns_rfc.h  dns_util.h
include/portable/: portable_dns.h  portable_endian.h  portable_platform.h
